# AI_pic_telegram_bot

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: code-checker.yaml
nginx/: default.conf
src/: Dockerfile  configs.py  requirements.txt  start_bot.py
